@@ -2,13 +2,16 @@
  - WARNING: Havner's configs changed (I got more physical throttles now)
  - Sunflower indicator removed, it was just obscuring the view
  - PZB alarm indicator for a loco that exports this info (BR420)
- - Toggleable font outline for better visibility
+ - Toggleable font outline for better visibility (see readme)
+ - Acceleration implemented on the C++ side, works properly when
+   driving after changing sides of the loco
  - Significat changes in the overlay shortcuts and cmd line:
    - Split into 2 groups, main and steam
    - Higher granularity in what you want to display
    - Colors changed a little
    - See the readme for current shortcuts and cmd line
- - J50, 2F Dock Tank and 3F Jinty by MeshTools
+ - Configs for J50, 2F Dock Tank and 3F Jinty by MeshTools
+ - Config for GWR Small Prairies by VictoryWorks
  - Damper axis removed, it made little sense
  - FireboxDoor, ExhaustSteam and LiveSteam axes (also for FEF-3)
 
